# mnemo

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  package-lock.json  package.json  release-it.json  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  branch-policy.yml  ci.yml  codeql.yml  fuzz.yml  lint.yml  release-smoke.yml  release.yml  scorecard.yml
docs/: CI_CD.md  COMPATIBILITY.md  FUZZING.md  INVARIANTS.md  OPENSSF_BEST_PRACTICES.md  PROJECTS.md  RELEASE_APP.md  REPOSITORY_RULES.md  SCORECARD.md  SEARCH.md  SECRETS.md  SESSIONS.md  THREAT_MODEL.md  UX_ONBOARDING.md
docs/assets/: README.md
docs/man/: mnemo.1
fuzz/: Cargo.toml
fuzz/fuzz_targets/: date_filter_parse.rs  mdfmt_escape.rs  secret_detection.rs
scripts/: checksums-release.sh  generate-sbom.sh  install.sh  package-release.sh  sign-release.sh  uninstall.sh
scripts/lib/: bashrc.sh
src/: archive.rs  backup.rs  cli.rs  completions.rs  config.rs  confirm.rs  db.rs  doctor.rs  export.rs  filter.rs  gitctx.rs  importer.rs  init.rs  lib.rs  lifecycle.rs  list.rs  main.rs  maintenance.rs  mdfmt.rs  migrations.rs  project.rs  prune.rs  secrets.rs  session.rs  shell.rs  show.rs  stats.rs  tui.rs  version.rs
src/lifecycle/: github.rs  signature.rs  uninstall.rs  update.rs  upgrade.rs
src/tui/: actions.rs  app.rs  clipboard.rs  events.rs  format.rs  help.rs  theme.rs  ui.rs
tests/: broken_pipe.rs  cli.rs  doctor.rs  onboarding.rs  project.rs  scripts.rs  search_show.rs  secrets.rs  session.rs  shell_upgrade.rs  v2_features.rs  v3_data_management.rs  v4_tui.rs  v5_lifecycle.rs  v6_product.rs
