[package]
name = "mnemo"
version = "0.10.2"
edition = "2021"
description = "Local-first shell history assistant with search, project context, TUI, backups, maintenance and verifiable releases"
license = "MIT"
authors = ["Killian Van Ruymbeke"]
readme = "README.md"
repository = "https://github.com/Vesperis-group/mnemo"
keywords = ["history", "bash", "tui", "fuzzy", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "mnemo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
crossterm = "0.28"
nucleo-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
tar = "0.4"
flate2 = "1.0"
ureq = "2.10"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
