[package]
name = "mnemo"
version = "1.6.12"
edition = "2021"
description = "Local-first shell history assistant with search, project context, TUI, backups, maintenance and verifiable releases"
license = "MIT"
authors = ["Killian Van Ruymbeke"]
readme = "README.md"
repository = "https://github.com/Vesperis-group/mnemo"
keywords = ["history", "bash", "tui", "fuzzy", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "mnemo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.30"
crossterm = "0.29"
nucleo-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
tar = "0.4"
flate2 = "1.0"
ureq = "3.3"
sha2 = "0.11"

[dev-dependencies]
tempfile = "3.10"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.11"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
