[package]
name = "mnemo-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"

[dependencies.mnemo]
path = ".."

# `fuzz/` est un workspace indépendant : il n'est jamais tiré dans le build ou
# les tests normaux du binaire `mnemo` (nightly requis uniquement ici).
[workspace]

[profile.release]
debug = 1

[[bin]]
name = "mdfmt_escape"
path = "fuzz_targets/mdfmt_escape.rs"
test = false
doc = false
bench = false

[[bin]]
name = "secret_detection"
path = "fuzz_targets/secret_detection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "date_filter_parse"
path = "fuzz_targets/date_filter_parse.rs"
test = false
doc = false
bench = false
